# advent-of-code-2023

./: Cargo.toml  justfile
daily-template/: Cargo.toml
daily-template/benches/: benchmarks.rs
daily-template/src/: part1.rs  part2.rs
day-01/: Cargo.toml
day-01/benches/: benchmarks.rs
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: benchmarks.rs
day-02/dhat-results/: part1-chumsky-dhat-heap.json  part1-dhat-heap.json  part2-chumsky-dhat-heap.json  part2-dhat-heap.json
day-02/src/: lib.rs  part1.rs  part1_chumsky.rs  part2.rs  part2_chumsky.rs
day-03/: Cargo.toml
day-03/benches/: benchmarks.rs
day-03/dhat-results/: part1-dhat-heap.json  part2-dhat-heap.json
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/benches/: benchmarks.rs
day-04/dhat-results/: part1-dhat-heap.json  part2-dhat-heap.json
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmarks.rs
day-05/dhat-results/: part1-dhat-heap.json  part2-dhat-heap.json
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks.rs
day-06/dhat-results/: dhat-heap.json  part2-dhat-results.json
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks.rs
day-07/dhat-results/: part1-dhat-heap.json  part2-dhat-heap.json
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks.rs
day-09/dhat-results/: part1-dhat-heap.json  part2-dhat-heap.json
day-09/src/: lib.rs  part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks.rs
day-10/dhat-results/: part1-dhat-heap.json  part2-dhat-heap.json
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/dhat-results/: part1-dhat-heap.json  part2-dhat-heap.json
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/benches/: benchmarks.rs
day-12/src/: lib.rs  part1.rs  part2.rs
day-13/: Cargo.toml
day-13/benches/: benchmarks.rs
day-13/src/: part1.rs  part2.rs
day-14/: Cargo.toml
day-14/benches/: benchmarks.rs
day-14/src/: part1.rs  part2.rs
day-15/: Cargo.toml
day-15/benches/: benchmarks.rs
day-15/src/: lib.rs  part1.rs  part2.rs
day-16/: Cargo.toml
day-16/benches/: benchmarks.rs
day-16/src/: part1.rs  part2.rs
day-17/: Cargo.toml
day-17/benches/: benchmarks.rs
day-17/src/: lib.rs  part1.rs  part1_astar.rs  part1_astar_with_skips.rs  part1_vector_astar_with_skips.rs  part2.rs  part2_astar_with_skips.rs  part2_vector_astar_with_skips.rs
day-18/: Cargo.toml
day-18/benches/: benchmarks.rs
day-18/src/: part1.rs  part2.rs
day-19/: Cargo.toml
day-19/benches/: benchmarks.rs
day-19/src/: part1.rs  part2.rs
day-20/: Cargo.toml
day-20/benches/: benchmarks.rs
day-20/src/: part1.rs  part2.rs
day-21/: Cargo.toml
day-21/benches/: benchmarks.rs
day-22/: Cargo.toml
day-23/: Cargo.toml
day-24/: Cargo.toml
day-24/benches/: benchmarks.rs
day-24/src/: part1.rs  part2.rs
(+8 files in other folders)
