[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"

[dev-dependencies]
dhat = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-03-bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
