[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = { workspace = true }
range-collections = "0.4.5"
range-set = "0.0.10"

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-05-bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
