[package]
name = "day-07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
num_enum = "0.7.1"

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-07-bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
